hero section done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,41 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Agroboard | Smart Decisions</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <img src="images/Logo.svg" alt="logo" class="logo" />
+      <nav>
+        <ul>
+          <li class="menu-link"><a href="">Home</a></li>
+          <li class="menu-link"><a href="">About</a></li>
+          <li class="menu-link"><a href="">News</a></li>
+          <li class="menu-link"><a href="">Contact</a></li>
+          <li class="menu-link">
+            <a href=""><button>Log In</button></a>
+          </li>
+        </ul>
+      </nav>
+      <!-- Hero Bection Below -->
+    </header>
+    <section class="hero-section">
+      <div class="hero-text">
+        <h1>Smart and Intelligent Agri-Decisions.</h1>
+        <p>
+          Make the best and the most informed agricultural decision today based
+          on quality information and data. Agroboard leverages advanced data
+          metrics and technologies to provide access to quality and timely
+          information to farmers like daily weather forecast and best practices
+          information .
+        </p>
+        <div class="hero-button">
+          <a href=""><button>Weather Forecast</button></a>
+          <a href=""><button class="no-fill">Agri-News</button></a>
+        </div>
+      </div>
+      <div class="hero-image">
+        <img src="images/hero-image.png" alt="hero image of farmer in field" />
+      </div>
+    </section>
+  </body>
   <script src="script.js"></script>
 </html>
