--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           </li>
         </ul>
       </nav>
-      <!-- Hero Bection Below -->
     </header>
+    <!-- Hero Bection Below -->
     <section class="hero-section">
       <div class="hero-text">
         <h1>Smart and Intelligent Agri-Decisions.</h1>
@@ -39,6 +39,58 @@
       </div>
       <div class="hero-image">
         <img src="images/hero-image.png" alt="hero image of farmer in field" />
+      </div>
+    </section>
+
+    <!-- products  section Below -->
+    <section class="products">
+      <h2 class="section-h2">How agroboard helps you thrive</h2>
+      <div class="cards">
+        <div class="linking-image">
+          <img src="images/mid-ring.svg" alt="circular-ring-link" />
+        </div>
+        <div class="card left">
+          <img src="images/data-analysis.svg" alt="data-analysis" />
+
+          <h2>data driven info</h2>
+          <p>
+            agrobaord relies on data from all over the world to get the best
+            views on modern agricultural practices and information within the
+            industry
+          </p>
+        </div>
+        <div class="card">
+          <img src="images/weather-forecast.svg" alt="weather" />
+
+          <h2>weather forecast</h2>
+          <p>
+            we provide real time updates on weather forecast via cutting edge
+            technologies, this allows farmers to be aware of weather changes and
+            climate smart
+          </p>
+          <a href=""><button>Weather Forecast</button></a>
+        </div>
+        <div class="card left">
+          <img src="images/data-visual.svg" alt="data-visualization" />
+
+          <h2>insight analytics</h2>
+          <p>
+            by relying heavily on data, agroboard generates visuals and
+            analytics on the current agricultural market which provides farmers
+            and agribusinesses with latest trends
+          </p>
+        </div>
+        <div class="card">
+          <img src="images/scientist.svg" alt="expert-analysis" />
+
+          <h2>expert info</h2>
+          <p>
+            all articles and news updates from are solely dependent on expert
+            scientific research and and input to what is occuring withing the
+            industry.
+          </p>
+          <a href=""><button>Agri-News</button></a>
+        </div>
       </div>
     </section>
   </body>
