--- a/index.html
+++ b/index.html
@@ -93,6 +93,21 @@
         </div>
       </div>
     </section>
+    <section class="testimonial">
+      <h2>What our customers say</h2>
+      <div class="testimonial-card">
+        <img src="images/testimonial-image.png" alt="testimonial person" />
+        <div class="testimonial-text">
+          <p>
+            “Agroboard is such a useful source of quality and trusted
+            information. Thanks to their wonderful forecast and news updates
+            along with free data insights, my agribusiness has seen a
+            significant growth“
+          </p>
+          <p><span>Diane Anabas</span>Farmer, Grid Coast.</p>
+        </div>
+      </div>
+    </section>
   </body>
   <script src="script.js"></script>
 </html>
