--- a/index.html
+++ b/index.html
@@ -108,6 +108,26 @@
         </div>
       </div>
     </section>
+    <section class="newsletter">
+      <h2>Subscribe to our Newsletter</h2>
+      <p>
+        Consider subscribing to our weekly newsletter. Get notified when news
+        and articles and reports are updated and rolled out to never miss a
+        thing.
+      </p>
+      <form action="" method="get" class="subscribe-form">
+        <label for="email"
+          ><input
+            type="email"
+            class="email"
+            required
+            placeholder="enter your email address......."
+        /></label>
+        <label for="subscribe"
+          ><input type="submit" class="subscribe" value="Subscribe"
+        /></label>
+      </form>
+    </section>
   </body>
   <script src="script.js"></script>
 </html>
