--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Agroboard | Smart Decisions</title>
   </head>
   <body>
+    <!--  THIS IS THE HEADER SECTION -->
+
     <header>
       <img src="images/Logo.svg" alt="logo" class="logo" />
       <nav>
@@ -21,7 +23,9 @@
         </ul>
       </nav>
     </header>
-    <!-- Hero Bection Below -->
+
+    <!--  THIS IS THE HERO SECTION -->
+
     <section class="hero-section">
       <div class="hero-text">
         <h1>Smart and Intelligent Agri-Decisions.</h1>
@@ -42,7 +46,8 @@
       </div>
     </section>
 
-    <!-- products  section Below -->
+    <!--  THIS IS THE PRODUCTS SECTION -->
+
     <section class="products">
       <h2 class="section-h2">How agroboard helps you thrive</h2>
       <div class="cards">
@@ -93,6 +98,9 @@
         </div>
       </div>
     </section>
+
+    <!--  THIS IS THE TESTIMONIAL SECTION -->
+
     <section class="testimonial">
       <h2>What our customers say</h2>
       <div class="testimonial-card">
@@ -128,6 +136,53 @@
         /></label>
       </form>
     </section>
+
+    <!--  THIS IS THE FOOTER SECTION -->
+
+    <footer>
+      <div class="links">
+        <img src="images/Logo.svg" alt="logo" class="logo" />
+        <div class="useful-links">
+          <h3>Useful Links</h3>
+          <a href="http://"><p>Home</p></a>
+          <a href="http://"><p>Agri-News</p></a>
+          <a href="http://"><p>Weather</p></a>
+        </div>
+        <div class="get-help">
+          <h3>Get Help</h3>
+          <p>agrobaord@gmail.com</p>
+          <p>+233 245765540</p>
+          <p>support.agro@gmail.com</p>
+        </div>
+        <div class="social">
+          <h3>Our Social Links</h3>
+          <a href="http://"
+            ><img src="images/Instagram.svg" alt="instagram icon"
+          /></a>
+          <a href="http://"
+            ><img src="images/Facebook.svg" alt="facebook icon"
+          /></a>
+          <a href="http://"
+            ><img src="images/Twitter.svg" alt="twitter icon"
+          /></a>
+          <a href="http://"
+            ><img src="images/LinkedIn.svg" alt="linkedin icon"
+          /></a>
+        </div>
+      </div>
+      <hr />
+      <div class="copyright-terms">
+        <div class="copyright">
+          <p>
+            Copyright © 2023
+            <a href="http://">Agroboard Inc.</a> All Rights Reserved.
+          </p>
+        </div>
+        <div class="terms">
+          <a href="http://"><p>Terms of Use & Privacy Policy</p></a>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="script.js"></script>
 </html>
