--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="weather.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Agroboard | Smart Decisions</title>
   </head>
   <body>
     <!--  THIS IS THE HEADER SECTION -->
 
     <header>
-      <img src="images/Logo.svg" alt="logo" class="logo" />
+      <a href="index.html"
+        ><img src="images/Logo.svg" alt="logo" class="logo"
+      /></a>
       <nav>
         <ul>
-          <li class="menu-link"><a href="">Home</a></li>
+          <li class="menu-link"><a href="index.html">Home</a></li>
           <li class="menu-link"><a href="">About</a></li>
           <li class="menu-link"><a href="">News</a></li>
-          <li class="menu-link"><a href="">Contact</a></li>
+          <li class="menu-link"><a href="#get-help">Contact</a></li>
           <li class="menu-link">
             <a href=""><button>Log In</button></a>
           </li>
@@ -37,7 +39,7 @@
           information.
         </p>
         <div class="hero-button">
-          <a href=""><button>Weather Forecast</button></a>
+          <a href="weather.html"><button>Weather Forecast</button></a>
           <a href=""><button class="no-fill">Agri-News</button></a>
         </div>
       </div>
@@ -143,31 +145,33 @@
 
     <footer>
       <div class="links">
-        <img src="images/Logo.svg" alt="logo" class="logo" />
+        <a href="index.html"
+          ><img src="images/Logo.svg" alt="logo" class="logo"
+        /></a>
         <div class="useful-links">
           <h3>Useful Links</h3>
-          <a href="http://"><p>Home</p></a>
+          <a href="index.html"><p>Home</p></a>
           <a href="http://"><p>Agri-News</p></a>
-          <a href="http://"><p>Weather</p></a>
+          <a href="weather.html"><p>Weather</p></a>
         </div>
-        <div class="get-help">
+        <div class="get-help" id="get-help">
           <h3>Get Help</h3>
-          <p>agrobaord@gmail.com</p>
-          <p>+233 245765540</p>
-          <p>support.agro@gmail.com</p>
+          <a href="mailto:agrobaord@gmail.com"><p>agrobaord@gmail.com</p></a>
+          <a href="tel:+233245765540"><p>+233 245765540</p></a>
+          <a href="mailto:agrobaord@gmail.com"><p>support.agro@gmail.com</p></a>
         </div>
         <div class="social">
           <h3>Our Social Links</h3>
-          <a href="http://"
+          <a href="http://www.instagram.com"
             ><img src="images/Instagram.svg" alt="instagram icon"
           /></a>
-          <a href="http://"
+          <a href="http://www.facebook.com"
             ><img src="images/Facebook.svg" alt="facebook icon"
           /></a>
-          <a href="http://"
+          <a href="http://www.twitter.com"
             ><img src="images/Twitter.svg" alt="twitter icon"
           /></a>
-          <a href="http://"
+          <a href="http://www.linkedin.com"
             ><img src="images/LinkedIn.svg" alt="linkedin icon"
           /></a>
         </div>
@@ -177,7 +181,7 @@
         <div class="copyright">
           <p>
             Copyright © 2023
-            <a href="http://">Agroboard Inc.</a> All Rights Reserved.
+            <a href="index.html">Agroboard Inc.</a> All Rights Reserved.
           </p>
         </div>
         <div class="terms">
