--- a/weather.html
+++ b/weather.html
@@ -10,13 +10,15 @@
     <!--  THIS IS THE HEADER SECTION -->
 
     <header>
-      <img src="images/Logo.svg" alt="logo" class="logo" />
+      <a href="index.html"
+        ><img src="images/Logo.svg" alt="logo" class="logo"
+      /></a>
       <nav>
         <ul>
-          <li class="menu-link"><a href="">Home</a></li>
+          <li class="menu-link"><a href="index.html">Home</a></li>
           <li class="menu-link"><a href="">About</a></li>
           <li class="menu-link"><a href="">News</a></li>
-          <li class="menu-link"><a href="">Contact</a></li>
+          <li class="menu-link"><a href="#get-help">Contact</a></li>
           <li class="menu-link">
             <a href=""><button>Log In</button></a>
           </li>
@@ -24,96 +26,24 @@
       </nav>
     </header>
 
-    <!--  THIS IS THE HERO SECTION -->
+    <!--  THIS IS THE WEATHER SECTION -->
 
-    <section class="hero-section">
-      <div class="hero-text">
-        <h1>Smart and Intelligent Agri-Decisions.</h1>
-        <p>
-          Make the best and the most informed agricultural decision today based
-          on quality information and data. Agroboard leverages advanced data
-          metrics and technologies to provide access to quality and timely
-          information to farmers like daily weather forecast and best practices
-          information.
-        </p>
-        <div class="hero-button">
-          <a href=""><button>Weather Forecast</button></a>
-          <a href=""><button class="no-fill">Agri-News</button></a>
-        </div>
+    <section class="weather">
+      <div class="heading">
+        <h1>Smart and Real Time Weather Forecast</h1>
       </div>
-      <div class="hero-image">
-        <img src="images/hero-image.png" alt="hero image of farmer in field" />
+      <div class="weather-dashboard">
+        <img
+          src="images/weather placeholder.png"
+          alt="weather dashboard image"
+        />
       </div>
-    </section>
-
-    <!--  THIS IS THE PRODUCTS SECTION -->
-
-    <section class="products">
-      <h2 class="section-h2">How agroboard helps you thrive</h2>
-      <div class="cards">
-        <div class="linking-image">
-          <img src="images/mid-ring.svg" alt="circular-ring-link" />
-        </div>
-        <div class="card left">
-          <img src="images/data-analysis.svg" alt="data-analysis" />
-
-          <h2>data driven info</h2>
-          <p>
-            agrobaord relies on data from all over the world to get the best
-            views on modern agricultural practices and information within the
-            industry
-          </p>
-        </div>
-        <div class="card">
-          <img src="images/weather-forecast.svg" alt="weather" />
-
-          <h2>weather forecast</h2>
-          <p>
-            we provide real time updates on weather forecast via cutting edge
-            technologies, this allows farmers to be aware of weather changes and
-            climate smart
-          </p>
-          <a href=""><button>Weather Forecast</button></a>
-        </div>
-        <div class="card left">
-          <img src="images/data-visual.svg" alt="data-visualization" />
-
-          <h2>insight analytics</h2>
-          <p>
-            by relying heavily on data, agroboard generates visuals and
-            analytics on the current agricultural market which provides farmers
-            and agribusinesses with latest trends
-          </p>
-        </div>
-        <div class="card">
-          <img src="images/scientist.svg" alt="expert-analysis" />
-
-          <h2>expert info</h2>
-          <p>
-            all articles and news updates from are solely dependent on expert
-            scientific research and and input to what is occuring withing the
-            industry.
-          </p>
-          <a href=""><button>Agri-News</button></a>
-        </div>
-      </div>
-    </section>
-
-    <!--  THIS IS THE TESTIMONIAL SECTION -->
-
-    <section class="testimonial">
-      <h2>What our customers say</h2>
-      <div class="testimonial-card">
-        <img src="images/testimonial-image.png" alt="testimonial person" />
-        <div class="testimonial-text">
-          <p>
-            “Agroboard is such a useful source of quality and trusted
-            information. Thanks to their wonderful forecast and news updates
-            along with free data insights, my agribusiness has seen a
-            significant growth“
-          </p>
-          <p><span>Diane Anabas</span>Farmer, Grid Coast.</p>
-        </div>
+      <div class="time-forecast">
+        <a href="#"><h2>Hour</h2></a>
+        <a href="#"><h2>Day</h2></a>
+        <a href="#"><h2>Week</h2></a>
+        <a href="#"><h2>Month</h2></a>
+        <a href="#"><h2>Year</h2></a>
       </div>
     </section>
 
@@ -143,31 +73,33 @@
 
     <footer>
       <div class="links">
-        <img src="images/Logo.svg" alt="logo" class="logo" />
+        <a href="index.html"
+          ><img src="images/Logo.svg" alt="logo" class="logo"
+        /></a>
         <div class="useful-links">
           <h3>Useful Links</h3>
-          <a href="http://"><p>Home</p></a>
+          <a href="index.html"><p>Home</p></a>
           <a href="http://"><p>Agri-News</p></a>
-          <a href="http://"><p>Weather</p></a>
+          <a href="weather.html"><p>Weather</p></a>
         </div>
-        <div class="get-help">
+        <div class="get-help" id="get-help">
           <h3>Get Help</h3>
-          <p>agrobaord@gmail.com</p>
-          <p>+233 245765540</p>
-          <p>support.agro@gmail.com</p>
+          <a href="mailto:agrobaord@gmail.com"><p>agrobaord@gmail.com</p></a>
+          <a href="tel:+233245765540"><p>+233 245765540</p></a>
+          <a href="mailto:agrobaord@gmail.com"><p>support.agro@gmail.com</p></a>
         </div>
         <div class="social">
           <h3>Our Social Links</h3>
-          <a href="http://"
+          <a href="http://www.instagram.com"
             ><img src="images/Instagram.svg" alt="instagram icon"
           /></a>
-          <a href="http://"
+          <a href="http://www.facebook.com"
             ><img src="images/Facebook.svg" alt="facebook icon"
           /></a>
-          <a href="http://"
+          <a href="http://www.twitter.com"
             ><img src="images/Twitter.svg" alt="twitter icon"
           /></a>
-          <a href="http://"
+          <a href="http://www.linkedin.com"
             ><img src="images/LinkedIn.svg" alt="linkedin icon"
           /></a>
         </div>
@@ -177,7 +109,7 @@
         <div class="copyright">
           <p>
             Copyright © 2023
-            <a href="http://">Agroboard Inc.</a> All Rights Reserved.
+            <a href="index.html">Agroboard Inc.</a> All Rights Reserved.
           </p>
         </div>
         <div class="terms">
