--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li class="menu-link"><a href="index.html">Home</a></li>
-          <li class="menu-link"><a href="">About</a></li>
+          <li class="menu-link"><a href="about.html">About</a></li>
           <li class="menu-link"><a href="">News</a></li>
           <li class="menu-link"><a href="#get-help">Contact</a></li>
           <li class="menu-link">
@@ -185,7 +185,7 @@
           </p>
         </div>
         <div class="terms">
-          <a href="http://"><p>Terms of Use & Privacy Policy</p></a>
+          <a href="#"><p>Terms of Use & Privacy Policy</p></a>
         </div>
       </div>
     </footer>
