--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
       <nav>
         <ul>
           <li class="menu-link"><a href="index.html">Home</a></li>
-          <li class="menu-link"><a href="">About</a></li>
-          <li class="menu-link"><a href="">News</a></li>
+          <li class="menu-link"><a href="about.html">About</a></li>
+          <li class="menu-link"><a href="news.html">News</a></li>
           <li class="menu-link"><a href="#get-help">Contact</a></li>
           <li class="menu-link">
             <a href=""><button>Log In</button></a>
@@ -94,7 +94,7 @@
         <div class="useful-links">
           <h3>Useful Links</h3>
           <a href="index.html"><p>Home</p></a>
-          <a href="http://"><p>Agri-News</p></a>
+          <a href="news.html"><p>Agri-News</p></a>
           <a href="weather.html"><p>Weather</p></a>
         </div>
         <div class="get-help" id="get-help">
