--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
           <li class="menu-link"><a href="index.html">Home</a></li>
           <li class="menu-link"><a href="about.html">About</a></li>
-          <li class="menu-link"><a href="">News</a></li>
+          <li class="menu-link"><a href="news.html">News</a></li>
           <li class="menu-link"><a href="#get-help">Contact</a></li>
           <li class="menu-link">
             <a href=""><button>Log In</button></a>
@@ -40,7 +40,7 @@
         </p>
         <div class="hero-button">
           <a href="weather.html"><button>Weather Forecast</button></a>
-          <a href=""><button class="no-fill">Agri-News</button></a>
+          <a href="news.html"><button class="no-fill">Agri-News</button></a>
         </div>
       </div>
       <div class="hero-image">
@@ -96,7 +96,7 @@
             scientific research and and input to what is occuring withing the
             industry.
           </p>
-          <a href=""><button>Agri-News</button></a>
+          <a href="news.html"><button>Agri-News</button></a>
         </div>
       </div>
     </section>
@@ -151,7 +151,7 @@
         <div class="useful-links">
           <h3>Useful Links</h3>
           <a href="index.html"><p>Home</p></a>
-          <a href="http://"><p>Agri-News</p></a>
+          <a href="news.html"><p>Agri-News</p></a>
           <a href="weather.html"><p>Weather</p></a>
         </div>
         <div class="get-help" id="get-help">
