--- a/weather.html
+++ b/weather.html
@@ -16,8 +16,8 @@
       <nav>
         <ul>
           <li class="menu-link"><a href="index.html">Home</a></li>
-          <li class="menu-link"><a href="">About</a></li>
-          <li class="menu-link"><a href="">News</a></li>
+          <li class="menu-link"><a href="about.css">About</a></li>
+          <li class="menu-link"><a href="news.html">News</a></li>
           <li class="menu-link"><a href="#get-help">Contact</a></li>
           <li class="menu-link">
             <a href=""><button>Log In</button></a>
@@ -79,7 +79,7 @@
         <div class="useful-links">
           <h3>Useful Links</h3>
           <a href="index.html"><p>Home</p></a>
-          <a href="http://"><p>Agri-News</p></a>
+          <a href="news.html"><p>Agri-News</p></a>
           <a href="weather.html"><p>Weather</p></a>
         </div>
         <div class="get-help" id="get-help">
@@ -113,7 +113,7 @@
           </p>
         </div>
         <div class="terms">
-          <a href="http://"><p>Terms of Use & Privacy Policy</p></a>
+          <a href="#"><p>Terms of Use & Privacy Policy</p></a>
         </div>
       </div>
     </footer>
