--- a/news.html
+++ b/news.html
@@ -56,7 +56,7 @@
       <div class="article-cards">
         <div class="card">
           <img src="news images/3-1.png" alt="" />
-          <a href="#"
+          <a href="article.html"
             ><div class="publisher">
               <h3>Farm to Fork: Is it real?</h3>
               <p>Published Jan. 20, 2023.</p>
@@ -65,7 +65,7 @@
         </div>
         <div class="card">
           <img src="news images/3-2.png" alt="" />
-          <a href="#"
+          <a href="article.html"
             ><div class="publisher">
               <h3>Backyard gardening, a guide</h3>
               <p>Published Jun. 3, 2023.</p>
@@ -74,7 +74,7 @@
         </div>
         <div class="card">
           <img src="news images/3-3.png" alt="" />
-          <a href="#"
+          <a href="article.html"
             ><div class="publisher">
               <h3>Do farmers deserve more in society?</h3>
               <p>Published Jan. 3, 2023.</p>
@@ -83,7 +83,7 @@
         </div>
         <div class="card">
           <img src="news images/3.png" alt="" />
-          <a href="#"
+          <a href="article.html"
             ><div class="publisher">
               <h3>Is social media good for farmers?</h3>
               <p>Published Feb. 5, 2023</p>
